--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>Creep</h3>
     <p>When you were here before Couldn't look you in the eye You're just like an angel Your skin makes me cry</p>
     <p>You float like a feather In a beautiful world And I wish I was special You're so fuckin' special</p>
+    <p>But I'm a creep, I'm a weirdo. What the hell am I doing here? I don't belong here.</p>
 </body>
 
 </html>
