--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <headline>
-            <h1>Radiohead</h1>
+            <h1 class="one">Radiohead</h1>
             <h3>Creep</h3>
         </headline>
         <span>
