--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body class="">
     <div class="container">
         <headline>
             <h1 class="one">Radiohead</h1>
